# rust_pico_template

./: Cargo.toml  README.md
.config/: config
src/: main.rs  ws2812.rs
